--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,9 +12,10 @@ services:
             - "DISPLAY"
             - "QT_X11_NO_MITSHM=1"
         volumes:
-            - /home/deli/Documents/husarion/ros-micromouse:/root
+            - /home/deli/Documents/husarion/ros-micromouse/:/root
 
         network_mode: host
+
 
     build:
         image: deli/micromouse
@@ -25,10 +26,16 @@ services:
     bringup_micromouse:
         image: deli/micromouse
         network_mode: host
+        environment:
+            - "DISPLAY"
+            - "QT_X11_NO_MITSHM=1"
         depends_on:
-            - build
+            build:
+                  condition: service_started
         command: bash -c "source /root/install/setup.bash && ros2 launch micromouse_bringup micromouse_bringup.launch.py"
         volumes:
+            - /tmp/.X11-unix:/tmp/.X11-unix
+            - /dev/dri:/dev/dri
             - /home/deli/Documents/husarion/ros-micromouse:/root
 
     rviz:
@@ -36,10 +43,13 @@ services:
         command: bash -c "source /root/install/setup.bash && rviz2 -d /root/src/micromouse_description/rviz/micromouse_rviz.rviz"
         volumes:
             - /home/deli/Documents/husarion/ros-micromouse:/root
+            - /tmp/.X11-unix:/tmp/.X11-unix
+            - /dev/dri:/dev/dri
         network_mode: host
         environment:
             - "DISPLAY"
             - "QT_X11_NO_MITSHM=1"
+
             # - "NVIDIA_VISIBLE_DEVICES=-all"
             # - "NVIDIA_DRIVER_CAPABILITIES=+$NVIDIA_DRIVER_CAPABILITIES"
 
