--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,16 +12,16 @@ services:
             - "DISPLAY"
             - "QT_X11_NO_MITSHM=1"
         volumes:
-            - /home/deli/Documents/husarion/ros-micromouse/:/root
+            - /home/deli/Documents/husarion/ros-micromouse/ws:/root/ws
 
         network_mode: host
 
 
     build:
         image: deli/micromouse
-        command: bash -c "cd /root && colcon build "
+        command: bash -c "cd /root/ws && colcon build "
         volumes:
-            - /home/deli/Documents/husarion/ros-micromouse:/root
+            - /home/deli/Documents/husarion/ros-micromouse/ws:/root/ws
 
     bringup_micromouse:
         image: deli/micromouse
@@ -32,17 +32,17 @@ services:
         depends_on:
             build:
                   condition: service_started
-        command: bash -c "source /root/install/setup.bash && ros2 launch micromouse_bringup micromouse_bringup.launch.py"
+        command: bash -c "source /root/ws/install/setup.bash && ros2 launch micromouse_bringup micromouse_bringup.launch.py"
         volumes:
             - /tmp/.X11-unix:/tmp/.X11-unix
             - /dev/dri:/dev/dri
-            - /home/deli/Documents/husarion/ros-micromouse:/root
+            - /home/deli/Documents/husarion/ros-micromouse/ws:/root/
 
     rviz:
         image: deli/micromouse
-        command: bash -c "source /root/install/setup.bash && rviz2 -d /root/src/micromouse_description/rviz/micromouse_rviz.rviz"
+        command: bash -c "source /root/ws/install/setup.bash && rviz2 -d /root/ws/src/micromouse_description/rviz/micromouse_rviz.rviz"
         volumes:
-            - /home/deli/Documents/husarion/ros-micromouse:/root
+            - /home/deli/Documents/husarion/ros-micromouse/ws:/root/
             - /tmp/.X11-unix:/tmp/.X11-unix
             - /dev/dri:/dev/dri
         network_mode: host
