--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,9 +17,13 @@ services:
         network_mode: host
 
 
-    build:
+    micromouse_steering:
         image: deli/micromouse
-        command: bash -c "cd /root/ws && colcon build  --executor parallel"
+        command: bash -c "source /root/ws/install/setup.bash && ros2 run rqt_robot_steering rqt_robot_steering"
+        network_mode: host
+        environment:
+            - "DISPLAY"
+            - "QT_X11_NO_MITSHM=1"
         volumes:
             - /home/deli/Documents/husarion/ros-micromouse/ws:/root/ws
 
@@ -29,10 +33,7 @@ services:
         environment:
             - "DISPLAY"
             - "QT_X11_NO_MITSHM=1"
-        depends_on:
-            build:
-                  condition: service_started
-        command: bash -c "cd /root/ws && colcon build --symlink-install  --executor parallel && source /root/ws/install/setup.bash && ros2 launch micromouse_bringup micromouse_bringup.launch.py"
+        command: bash -c "cd /root/ws && colcon build --executor parallel && source /root/ws/install/setup.bash && ros2 launch micromouse_bringup micromouse_bringup.launch.py"
         volumes:
             - /tmp/.X11-unix:/tmp/.X11-unix
             - /dev/dri:/dev/dri
