--- a/ws/src/micromouse_robot/package.xml
+++ b/ws/src/micromouse_robot/package.xml
@@ -16,6 +16,7 @@
     <build_type>ament_cmake</build_type>
     <depend>rclcpp</depend>
     <depend>sensor_msgs</depend>
+    <depend>nav_msgs</depend>
   </export>
 
 </package>
