Added universal interface for range sensor

--- a/ws/src/micromouse_robot/CMakeLists.txt
+++ b/ws/src/micromouse_robot/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
-
+# find_package(tf2 REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -25,7 +25,8 @@ if(BUILD_TESTING)
 endif()
 
 add_executable(micromouse_robot
-  src/range_sensor.cpp
+  src/rclcpp_range_sensor.cpp
+  # src/imu.cpp
   src/micromouse_robot.cpp
   src/motors.cpp
   src/pid_controller.cpp
