--- a/ws/src/micromouse_robot/package.xml
+++ b/ws/src/micromouse_robot/package.xml
@@ -17,6 +17,8 @@
     <depend>rclcpp</depend>
     <depend>sensor_msgs</depend>
     <depend>nav_msgs</depend>
+    <depend>tf2</depend>
+
   </export>
 
 </package>
