Changed to local volumines

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
         volumes:
             - /tmp/.X11-unix:/tmp/.X11-unix
             - /dev/dri:/dev/dri
-            - /home/deli/Documents/husarion/ros-micromouse/ws:/root/ws
+            - ./ws:/root/ws
 
     micromouse_controller:
         image: deli/micromouse
@@ -42,13 +42,13 @@ services:
         volumes:
             - /tmp/.X11-unix:/tmp/.X11-unix
             - /dev/dri:/dev/dri
-            - /home/deli/Documents/husarion/ros-micromouse/ws:/root/ws
+            - ./ws:/root/ws
 
     rviz:
         image: deli/micromouse
         command: bash -c "source /root/ws/install/setup.bash && rviz2 -d /root/ws/src/micromouse_description/rviz/micromouse_rviz.rviz"
         volumes:
-            - /home/deli/Documents/husarion/ros-micromouse/ws:/root/ws
+            - ./ws:/root/ws
             - /tmp/.X11-unix:/tmp/.X11-unix
             - /dev/dri:/dev/dri
         network_mode: host
